# noRAG

./: .gitignore  README.md  pyproject.toml
benchmarks/sample/: questions.json
benchmarks/sample/docs/: git-workflow.md  python-basics.md
docs/: cku-spec-v1.md  testing.md
docs/plans/: 2026-03-16-norag-design.md
src/norag/: __init__.py  config.py  utils.py
src/norag/bench/: __init__.py  dataset.py  metrics.py  report.py  runner.py
src/norag/cli/: __init__.py  audit.py  bench.py  compile.py  info.py  query.py  serve.py  validate.py  watch.py
src/norag/compiler/: __init__.py  engine.py  merger.py  splitter.py
src/norag/compiler/parsers/: __init__.py  base.py  markdown.py  pdf.py
src/norag/compiler/providers/: __init__.py  base.py  claude.py  ollama.py
src/norag/models/: __init__.py  cku.py
src/norag/query/: __init__.py  assembler.py  engine.py  router.py
src/norag/server/: app.py
src/norag/store/: __init__.py  audit.py  cku_store.py  knowledge_map.py
tests/: test_access.py  test_audit.py  test_bench.py  test_merger.py  test_models.py  test_parsers.py  test_query.py  test_server.py  test_splitter.py  test_store.py  test_watch.py
